# Text-Capture

./: .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  README.md  TextCapture.pyproject  build_cpp.py  main.py  rc_resources.py  requirements.txt  resources.qrc  style.qss
docs/: README.md  README_DARK_THEME.md  RESOURCES_GUIDE.md  contributing.md  developer-guide.md  user-guide.md
src/: __init__.py  app.py
src/actions/: __init__.py  button_actions.py
src/core/: __init__.py  async_utils.py  button_manager.py
src/ocr/: README.md  __init__.py  cpp_ocr.py  image_processor.py  ocr_engine.py  python_ocr.py
src/ocr/cpp/: CMakeLists.txt  bindings.cpp  cpp_ocr.cpp  ocr_engine.cpp  ocr_engine.h
src/ocr/cpp/cmake/: FindTesseract.cmake
src/resources/styles/: style.qss
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  compile_resources.py  css_manager.py  remove_pycache.py  resource_loader.py  text_processor.py
src/widgets/: __init__.py  form.ui  ui_form.py
src/widgets/mainwindow/: __init__.py  form.ui  ui_form.py
test/: compile_resources.py  demo_widgets.py
widgets/: form.ui  ui_form.py
